--- a/EXCLUIR.ipynb
+++ b/EXCLUIR.ipynb
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2458,6 +2458,278 @@
    "source": [
     "mun_sim.MUNCODDV"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Testes do dia 03/01"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 11194 entries, 0 to 11193\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column                            Non-Null Count  Dtype \n",
+      "---  ------                            --------------  ----- \n",
+      " 0   Ano                               11194 non-null  object\n",
+      " 1   Nível                             11194 non-null  object\n",
+      " 2   Cód.                              11194 non-null  object\n",
+      " 3   Unidade da Federação e Município  11194 non-null  object\n",
+      " 4   Cor ou raça                       11194 non-null  object\n",
+      " 5   Sexo                              11194 non-null  object\n",
+      " 6   Total                             11194 non-null  object\n",
+      " 7   75 a 79 anos                      11194 non-null  object\n",
+      " 8   80 a 84 anos                      11194 non-null  object\n",
+      " 9   85 a 89 anos                      11194 non-null  object\n",
+      " 10  90 a 94 anos                      11194 non-null  object\n",
+      " 11  95 a 99 anos                      11194 non-null  object\n",
+      " 12  100 anos ou mais                  11194 non-null  object\n",
+      "dtypes: object(13)\n",
+      "memory usage: 1.1+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Carga de arquivo de População do Censo\n",
+    "teste_uf_raw = pd.read_parquet('downloads_outros_v2/censo_pop_raw.parquet')\n",
+    "teste_uf_raw.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['UF', 'MU'], dtype=object)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "teste_uf_raw.Nível.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Ano</th>\n",
+       "      <th>Unidade da Federação e Município</th>\n",
+       "      <th>Total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>Rondônia</td>\n",
+       "      <td>1562409</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>Acre</td>\n",
+       "      <td>733559</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>Amazonas</td>\n",
+       "      <td>3483985</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>Roraima</td>\n",
+       "      <td>450479</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>Pará</td>\n",
+       "      <td>7581051</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>Amapá</td>\n",
+       "      <td>669526</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>Tocantins</td>\n",
+       "      <td>1383445</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>Maranhão</td>\n",
+       "      <td>6574789</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>Piauí</td>\n",
+       "      <td>3118360</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>Ceará</td>\n",
+       "      <td>8452381</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Ano Unidade da Federação e Município    Total\n",
+       "0  2010                         Rondônia  1562409\n",
+       "1  2010                             Acre   733559\n",
+       "2  2010                         Amazonas  3483985\n",
+       "3  2010                          Roraima   450479\n",
+       "4  2010                             Pará  7581051\n",
+       "5  2010                            Amapá   669526\n",
+       "6  2010                        Tocantins  1383445\n",
+       "7  2010                         Maranhão  6574789\n",
+       "8  2010                            Piauí  3118360\n",
+       "9  2010                            Ceará  8452381"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "teste_uf_ = teste_uf_raw[teste_uf_raw['Nível'] == 'UF']\n",
+    "teste_uf_[['Ano','Unidade da Federação e Município','Total']].head(10)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# teste_uf_['Cód.'].astype(str).str[:2]\n",
+    "teste_uf_['Total'] = teste_uf_['Total'].astype(int)\n",
+    "teste_uf = teste_uf_.groupby('uf_co')['Total'].sum()\n",
+    "teste_uf.head(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 111420 entries, 0 to 111419\n",
+      "Data columns (total 15 columns):\n",
+      " #   Column            Non-Null Count   Dtype \n",
+      "---  ------            --------------   ----- \n",
+      " 0   Unnamed: 0        111420 non-null  object\n",
+      " 1   Ano               111419 non-null  object\n",
+      " 2   Nível             111407 non-null  object\n",
+      " 3   Cód.              111400 non-null  object\n",
+      " 4   Município         111400 non-null  object\n",
+      " 5   Cor ou raça       111400 non-null  object\n",
+      " 6   Sexo              111400 non-null  object\n",
+      " 7   Total             111420 non-null  int64 \n",
+      " 8   0 a 4 anos        111420 non-null  int64 \n",
+      " 9   75 a 79 anos      111420 non-null  int64 \n",
+      " 10  80 a 84 anos      111420 non-null  int64 \n",
+      " 11  85 a 89 anos      111420 non-null  int64 \n",
+      " 12  90 a 94 anos      111420 non-null  int64 \n",
+      " 13  95 a 99 anos      111420 non-null  int64 \n",
+      " 14  100 anos ou mais  111420 non-null  int64 \n",
+      "dtypes: int64(8), object(7)\n",
+      "memory usage: 12.8+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Colunas para transformar em inteiro\n",
+    "cols_age = ['Total','0 a 4 anos', '75 a 79 anos', '80 a 84 anos', '85 a 89 anos','90 a 94 anos', '95 a 99 anos', '100 anos ou mais']\n",
+    "# para todas as colunas identificar substituir '-' por 0\n",
+    "teste_uf_ = censo_pop.copy()\n",
+    "teste_uf_[cols_age] = teste_uf_[cols_age].replace('-',0)\n",
+    "\n",
+    "# transformar todas as colunas definidas para formato integer\n",
+    "teste_uf_[cols_age] = teste_uf_[cols_age].apply(pd.to_numeric, errors='coerce').fillna(0).astype(int)\n",
+    "teste_uf_.info()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'censo_pop_clean03' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[20], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m teste_uf_ \u001b[38;5;241m=\u001b[39m \u001b[43mcenso_pop_clean03\u001b[49m[censo_pop_clean03[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNível\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMU\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m      2\u001b[0m teste_uf_\u001b[38;5;241m.\u001b[39mhead()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'censo_pop_clean03' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "teste_uf_ = censo_pop_clean03[censo_pop_clean03['Nível'] == 'MU']\n",
+    "teste_uf_.head()"
+   ]
   }
  ],
  "metadata": {
@@ -2476,7 +2748,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.undefined.undefined"
   }
  },
  "nbformat": 4,
