v4 finalizada e outros ajustes

--- a/EXCLUIR.ipynb
+++ b/EXCLUIR.ipynb
@@ -2730,6 +2730,86 @@
     "teste_uf_ = censo_pop_clean03[censo_pop_clean03['Nível'] == 'MU']\n",
     "teste_uf_.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def save_file(df, save_file_ent, save_type, versao_label, save_format):\n",
+    "    \"\"\"\n",
+    "    Salva um DataFrame em um arquivo, com base nas configurações fornecidas.\n",
+    "\n",
+    "    Args:\n",
+    "        df: O DataFrame a ser salvo.\n",
+    "        save_file_ent: Nome base do arquivo.\n",
+    "        save_type: Tipo de salvamento (raw, temp, final).\n",
+    "        versao_label: Rótulo da versão.\n",
+    "        save_format: Formato do arquivo (parquet, csv, excel).\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Define o diretório de saída com base no tipo de salvamento\n",
+    "    directories = {'raw': 'files_in/', 'temp': 'files_temp/', 'final': 'files_out/'}\n",
+    "    directory = directories[save_type]\n",
+    "\n",
+    "    # Extrai a versão do rótulo\n",
+    "    save_vers = versao_label.split('__')[0]\n",
+    "\n",
+    "    # Extrai a extensão do nome do arquivo base\n",
+    "    save_file_exit = save_file_ent.split('_')[-1]\n",
+    "\n",
+    "    # Constrói o nome completo do arquivo\n",
+    "    filename = f\"{directory}{save_vers}__{save_file_ent}.{save_format}\"\n",
+    "\n",
+    "    # Seleciona a função de salvamento de acordo com o formato\n",
+    "    save_functions = {'parquet': df.to_parquet, 'csv': df.to_csv, 'excel': df.to_excel}\n",
+    "    save_function = save_functions[save_format]\n",
+    "\n",
+    "    # Salva o arquivo\n",
+    "    save_function(filename, index=False)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exemplo de uso:\n",
+    "df_temp01 = pd.DataFrame({'col1': [1, 2, 3], 'col2': ['a', 'b', 'c']})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "def save_file(df, save_type, save_format):\n",
+    "    save_file_ent = input(\"df_temp01\")\n",
+    "    versao_label = input(\"AvoidMort_v4_BR_CID_mun\")\n",
+    "    # ... resto da função ...\n",
+    "\n",
+    "\n",
+    "save_file(df, 'dobr_evit_merged_temp01', 'temp', 'AvoidMort_v4__BR_CID_mun', 'parquet')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def save_file(df, save_file_ent='meu_arquivo', versao_label='v1.0', save_type='temp', save_format='parquet'):\n",
+    "    # ... resto da função ..."
+   ]
   }
  ],
  "metadata": {
