--- a/AvoidMort_Dados_Gerais.ipynb
+++ b/AvoidMort_Dados_Gerais.ipynb
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -2122,7 +2122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2132,7 +2132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -2161,7 +2161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2183,7 +2183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -2224,7 +2224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -2267,7 +2267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2306,7 +2306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -2335,7 +2335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2375,7 +2375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -2425,23 +2425,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Registros da tabela : 2228000\n",
-      "+----+-------+----------+----------------------------+--------+---------------+-------------+---------------+------+---------+----------+\n",
-      "|    | Ano   | mun_co   | mun_no                     | Sexo   | Cor ou raça   |   pop_total |   pop_under74 | uf   | uf_co   | uf_no    |\n",
-      "|----+-------+----------+----------------------------+--------+---------------+-------------+---------------+------+---------+----------|\n",
-      "|  0 | _2010 | _110001  | Alta Floresta D'Oeste (RO) | Homens | Branca        |        5311 |          5202 | RO   | _11     | Rondônia |\n",
-      "|  1 | _2010 | _110001  | Alta Floresta D'Oeste (RO) | Homens | Branca        |        5311 |          5202 | RO   | _11     | Rondônia |\n",
-      "|  2 | _2010 | _110001  | Alta Floresta D'Oeste (RO) | Homens | Branca        |        5311 |          5202 | RO   | _11     | Rondônia |\n",
-      "|  3 | _2010 | _110001  | Alta Floresta D'Oeste (RO) | Homens | Branca        |        5311 |          5202 | RO   | _11     | Rondônia |\n",
-      "|  4 | _2010 | _110001  | Alta Floresta D'Oeste (RO) | Homens | Branca        |        5311 |          5202 | RO   | _11     | Rondônia |\n",
-      "+----+-------+----------+----------------------------+--------+---------------+-------------+---------------+------+---------+----------+\n"
+      "(27, 2)\n",
+      "   uf_co     uf_no\n",
+      "0    _11  Rondônia\n",
+      "10   _12      Acre\n",
+      "20   _13  Amazonas\n",
+      "30   _14   Roraima\n",
+      "40   _15      Pará\n"
      ]
     }
    ],
@@ -2451,7 +2448,37 @@
     "\n",
     "censo_uf_temp01_ = censo_uf_temp01[['uf_co','uf_no']]\n",
     "\n",
-    "censo_mun_temp02 = pd.merge(censo_mun_temp01,censo_uf_temp01_,on='uf_co',how='left')\n",
+    "censo_uf_temp02_ = censo_uf_temp01_.drop_duplicates()\n",
+    "\n",
+    "print(censo_uf_temp02_.shape)\n",
+    "print(censo_uf_temp02_.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Registros da tabela : 111400\n",
+      "+----+-------+----------+----------------------------+--------+---------------+-------------+---------------+------+---------+----------+\n",
+      "|    | Ano   | mun_co   | mun_no                     | Sexo   | Cor ou raça   |   pop_total |   pop_under74 | uf   | uf_co   | uf_no    |\n",
+      "|----+-------+----------+----------------------------+--------+---------------+-------------+---------------+------+---------+----------|\n",
+      "|  0 | _2010 | _110001  | Alta Floresta D'Oeste (RO) | Homens | Branca        |        5311 |          5202 | RO   | _11     | Rondônia |\n",
+      "|  1 | _2010 | _110001  | Alta Floresta D'Oeste (RO) | Homens | Preta         |         693 |           673 | RO   | _11     | Rondônia |\n",
+      "|  2 | _2010 | _110001  | Alta Floresta D'Oeste (RO) | Homens | Amarela       |          96 |            94 | RO   | _11     | Rondônia |\n",
+      "|  3 | _2010 | _110001  | Alta Floresta D'Oeste (RO) | Homens | Parda         |        6323 |          6206 | RO   | _11     | Rondônia |\n",
+      "|  4 | _2010 | _110001  | Alta Floresta D'Oeste (RO) | Homens | Indígena      |         233 |           229 | RO   | _11     | Rondônia |\n",
+      "+----+-------+----------+----------------------------+--------+---------------+-------------+---------------+------+---------+----------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "censo_mun_temp02 = pd.merge(censo_mun_temp01,censo_uf_temp02_,on='uf_co',how='left')\n",
     "\n",
     "# mostrar dados gerais da tabela após transformações\n",
     "tab = censo_mun_temp02\n",
@@ -2468,7 +2495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2496,7 +2523,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
