Ajustes para dash powerbi

--- a/AvoidMort_Dados_Gerais.ipynb
+++ b/AvoidMort_Dados_Gerais.ipynb
@@ -192,9 +192,190 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reading package lists... Done\n",
+      "E: List directory /var/lib/apt/lists/partial is missing. - Acquire (13: Permission denied)\n",
+      "E: Could not open lock file /var/lib/dpkg/lock-frontend - open (13: Permission denied)\n",
+      "E: Unable to acquire the dpkg frontend lock (/var/lib/dpkg/lock-frontend), are you root?\n",
+      "Requirement already satisfied: pip in /usr/local/python/3.13.1/lib/python3.13/site-packages (24.3.1)\n",
+      "Collecting pip\n",
+      "  Downloading pip-25.0.1-py3-none-any.whl.metadata (3.7 kB)\n",
+      "Downloading pip-25.0.1-py3-none-any.whl (1.8 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.8/1.8 MB\u001b[0m \u001b[31m22.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: pip\n",
+      "  Attempting uninstall: pip\n",
+      "    Found existing installation: pip 24.3.1\n",
+      "    Uninstalling pip-24.3.1:\n",
+      "      Successfully uninstalled pip-24.3.1\n",
+      "Successfully installed pip-25.0.1\n",
+      "Collecting pysus\n",
+      "  Downloading pysus-0.11.0-py3-none-any.whl.metadata (1.2 kB)\n",
+      "Collecting Unidecode<2.0.0,>=1.3.6 (from pysus)\n",
+      "  Downloading Unidecode-1.3.8-py3-none-any.whl.metadata (13 kB)\n",
+      "Collecting aioftp<0.22.0,>=0.21.4 (from pysus)\n",
+      "  Downloading aioftp-0.21.4-py3-none-any.whl.metadata (6.1 kB)\n",
+      "Collecting bigtree<0.13.0,>=0.12.2 (from pysus)\n",
+      "  Downloading bigtree-0.12.5-py3-none-any.whl.metadata (28 kB)\n",
+      "Collecting cffi==1.15.1 (from pysus)\n",
+      "  Downloading cffi-1.15.1.tar.gz (508 kB)\n",
+      "  Installing build dependencies ... \u001b[?25ldone\n",
+      "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
+      "\u001b[?25h  Preparing metadata (pyproject.toml) ... \u001b[?25ldone\n",
+      "\u001b[?25hCollecting dateparser<2.0.0,>=1.1.8 (from pysus)\n",
+      "  Downloading dateparser-1.2.1-py3-none-any.whl.metadata (29 kB)\n",
+      "Collecting dbfread==2.0.7 (from pysus)\n",
+      "  Downloading dbfread-2.0.7-py2.py3-none-any.whl.metadata (3.3 kB)\n",
+      "Collecting elasticsearch==7.16.2 (from elasticsearch[preprocessing]==7.16.2->pysus)\n",
+      "  Downloading elasticsearch-7.16.2-py2.py3-none-any.whl.metadata (5.7 kB)\n",
+      "Collecting fastparquet<0.9.0,>=0.8.1 (from pysus)\n",
+      "  Downloading fastparquet-0.8.3.tar.gz (393 kB)\n",
+      "  Installing build dependencies ... \u001b[?25ldone\n",
+      "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
+      "\u001b[?25h  Preparing metadata (pyproject.toml) ... \u001b[?25ldone\n",
+      "\u001b[?25hCollecting humanize<5.0.0,>=4.8.0 (from pysus)\n",
+      "  Downloading humanize-4.11.0-py3-none-any.whl.metadata (7.8 kB)\n",
+      "Collecting loguru<0.7.0,>=0.6.0 (from pysus)\n",
+      "  Downloading loguru-0.6.0-py3-none-any.whl.metadata (21 kB)\n",
+      "Collecting numpy==1.26.2 (from pysus)\n",
+      "  Downloading numpy-1.26.2.tar.gz (15.7 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m15.7/15.7 MB\u001b[0m \u001b[31m3.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25h  Installing build dependencies ... \u001b[?25ldone\n",
+      "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
+      "\u001b[?25h  Installing backend dependencies ... \u001b[?25ldone\n",
+      "\u001b[?25h  Preparing metadata (pyproject.toml) ... \u001b[?25ldone\n",
+      "\u001b[?25hRequirement already satisfied: pandas>=1.5.3 in /usr/local/python/3.13.1/lib/python3.13/site-packages (from pysus) (2.2.3)\n",
+      "Requirement already satisfied: pyarrow>=11.0.0 in /usr/local/python/3.13.1/lib/python3.13/site-packages (from pysus) (19.0.0)\n",
+      "Collecting pycparser==2.21 (from pysus)\n",
+      "  Downloading pycparser-2.21-py2.py3-none-any.whl.metadata (1.1 kB)\n",
+      "Collecting pyreaddbc>=1.1.0 (from pysus)\n",
+      "  Downloading pyreaddbc-1.2.0.tar.gz (57 kB)\n",
+      "  Installing build dependencies ... \u001b[?25ldone\n",
+      "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
+      "\u001b[?25h  Preparing metadata (pyproject.toml) ... \u001b[?25ldone\n",
+      "\u001b[?25hCollecting python-dateutil==2.8.2 (from pysus)\n",
+      "  Downloading python_dateutil-2.8.2-py2.py3-none-any.whl.metadata (8.2 kB)\n",
+      "Collecting tqdm==4.64.0 (from pysus)\n",
+      "  Downloading tqdm-4.64.0-py2.py3-none-any.whl.metadata (57 kB)\n",
+      "Collecting urwid<3.0.0,>=2.1.2 (from pysus)\n",
+      "  Downloading urwid-2.6.16-py3-none-any.whl.metadata (11 kB)\n",
+      "Collecting wget<4.0,>=3.2 (from pysus)\n",
+      "  Downloading wget-3.2.zip (10 kB)\n",
+      "  Installing build dependencies ... \u001b[?25ldone\n",
+      "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
+      "\u001b[?25h  Preparing metadata (pyproject.toml) ... \u001b[?25ldone\n",
+      "\u001b[?25hCollecting urllib3<2,>=1.21.1 (from elasticsearch==7.16.2->elasticsearch[preprocessing]==7.16.2->pysus)\n",
+      "  Downloading urllib3-1.26.20-py2.py3-none-any.whl.metadata (50 kB)\n",
+      "Requirement already satisfied: certifi in /home/codespace/.local/lib/python3.13/site-packages (from elasticsearch==7.16.2->elasticsearch[preprocessing]==7.16.2->pysus) (2024.12.14)\n",
+      "\u001b[33mWARNING: elasticsearch 7.16.2 does not provide the extra 'preprocessing'\u001b[0m\u001b[33m\n",
+      "\u001b[0mRequirement already satisfied: six>=1.5 in /home/codespace/.local/lib/python3.13/site-packages (from python-dateutil==2.8.2->pysus) (1.17.0)\n",
+      "Requirement already satisfied: pytz>=2024.2 in /usr/local/python/3.13.1/lib/python3.13/site-packages (from dateparser<2.0.0,>=1.1.8->pysus) (2024.2)\n",
+      "Collecting regex!=2019.02.19,!=2021.8.27,>=2015.06.24 (from dateparser<2.0.0,>=1.1.8->pysus)\n",
+      "  Downloading regex-2024.11.6-cp313-cp313-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (40 kB)\n",
+      "Collecting tzlocal>=0.2 (from dateparser<2.0.0,>=1.1.8->pysus)\n",
+      "  Downloading tzlocal-5.3-py3-none-any.whl.metadata (7.6 kB)\n",
+      "Requirement already satisfied: cramjam>=2.3.0 in /usr/local/python/3.13.1/lib/python3.13/site-packages (from fastparquet<0.9.0,>=0.8.1->pysus) (2.9.1)\n",
+      "Requirement already satisfied: fsspec in /usr/local/python/3.13.1/lib/python3.13/site-packages (from fastparquet<0.9.0,>=0.8.1->pysus) (2024.12.0)\n",
+      "Requirement already satisfied: packaging in /home/codespace/.local/lib/python3.13/site-packages (from fastparquet<0.9.0,>=0.8.1->pysus) (24.2)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in /usr/local/python/3.13.1/lib/python3.13/site-packages (from pandas>=1.5.3->pysus) (2024.2)\n",
+      "Requirement already satisfied: pyyaml>=6 in /home/codespace/.local/lib/python3.13/site-packages (from pyreaddbc>=1.1.0->pysus) (6.0.2)\n",
+      "Collecting typing-extensions (from urwid<3.0.0,>=2.1.2->pysus)\n",
+      "  Downloading typing_extensions-4.12.2-py3-none-any.whl.metadata (3.0 kB)\n",
+      "Requirement already satisfied: wcwidth in /home/codespace/.local/lib/python3.13/site-packages (from urwid<3.0.0,>=2.1.2->pysus) (0.2.13)\n",
+      "Downloading pysus-0.11.0-py3-none-any.whl (1.3 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.3/1.3 MB\u001b[0m \u001b[31m8.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hDownloading dbfread-2.0.7-py2.py3-none-any.whl (20 kB)\n",
+      "Downloading elasticsearch-7.16.2-py2.py3-none-any.whl (385 kB)\n",
+      "Downloading pycparser-2.21-py2.py3-none-any.whl (118 kB)\n",
+      "Downloading python_dateutil-2.8.2-py2.py3-none-any.whl (247 kB)\n",
+      "Downloading tqdm-4.64.0-py2.py3-none-any.whl (78 kB)\n",
+      "Downloading aioftp-0.21.4-py3-none-any.whl (37 kB)\n",
+      "Downloading bigtree-0.12.5-py3-none-any.whl (63 kB)\n",
+      "Downloading dateparser-1.2.1-py3-none-any.whl (295 kB)\n",
+      "Downloading humanize-4.11.0-py3-none-any.whl (128 kB)\n",
+      "Downloading loguru-0.6.0-py3-none-any.whl (58 kB)\n",
+      "Downloading Unidecode-1.3.8-py3-none-any.whl (235 kB)\n",
+      "Downloading urwid-2.6.16-py3-none-any.whl (297 kB)\n",
+      "Downloading regex-2024.11.6-cp313-cp313-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (796 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m796.9/796.9 kB\u001b[0m \u001b[31m38.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hDownloading tzlocal-5.3-py3-none-any.whl (17 kB)\n",
+      "Downloading urllib3-1.26.20-py2.py3-none-any.whl (144 kB)\n",
+      "Downloading typing_extensions-4.12.2-py3-none-any.whl (37 kB)\n",
+      "Building wheels for collected packages: cffi, numpy, fastparquet, pyreaddbc, wget\n",
+      "  Building wheel for cffi (pyproject.toml) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for cffi: filename=cffi-1.15.1-cp313-cp313-linux_x86_64.whl size=473667 sha256=1a17984ddae8aee851252e4d280a198458e410613d8bf5b9cd24a800438f4616\n",
+      "  Stored in directory: /home/codespace/.cache/pip/wheels/92/c2/a0/8f21a00311ab2a1900b79396d87decfe65f97c7eead525854f\n",
+      "  Building wheel for numpy (pyproject.toml) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for numpy: filename=numpy-1.26.2-cp313-cp313-linux_x86_64.whl size=29584984 sha256=c691f301d1abb79e0de01f8d076f3f80d65f1a26a660b62186f8c99db4b628bc\n",
+      "  Stored in directory: /home/codespace/.cache/pip/wheels/c9/15/32/8370c1b87f23602d92aa9dd11d143dee8df8b5fc2fdbf2b40b\n",
+      "  Building wheel for fastparquet (pyproject.toml) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for fastparquet: filename=fastparquet-0.8.3-cp313-cp313-linux_x86_64.whl size=1780804 sha256=e69369065fdac3d6d8c9165f3fdc355eb4c31fddd6d21e3ce01a6e98a2961ace\n",
+      "  Stored in directory: /home/codespace/.cache/pip/wheels/3d/0b/ee/f669dc267c36337e2a47a4b7d3903314e73d7f14f7427784bc\n",
+      "  Building wheel for pyreaddbc (pyproject.toml) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for pyreaddbc: filename=pyreaddbc-1.2.0-cp313-cp313-manylinux_2_31_x86_64.whl size=108602 sha256=83560b07958b442781cce01c77781311248563d88ee262fbc81264df9a61e2a3\n",
+      "  Stored in directory: /home/codespace/.cache/pip/wheels/9d/83/bc/42e1143e4f8d155c60d0773cd197a7231ecf80b90e7731f0d5\n",
+      "  Building wheel for wget (pyproject.toml) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for wget: filename=wget-3.2-py3-none-any.whl size=9685 sha256=21cfbbe09ddf27a319a7f629a2218f25d99e573005876c72265287150d0b3859\n",
+      "  Stored in directory: /home/codespace/.cache/pip/wheels/8a/b8/04/0c88fb22489b0c049bee4e977c5689c7fe597d6c4b0e7d0b6a\n",
+      "Successfully built cffi numpy fastparquet pyreaddbc wget\n",
+      "Installing collected packages: wget, dbfread, urllib3, Unidecode, tzlocal, typing-extensions, tqdm, regex, python-dateutil, pycparser, numpy, loguru, humanize, bigtree, aioftp, urwid, elasticsearch, dateparser, cffi, pyreaddbc, fastparquet, pysus\n",
+      "  Attempting uninstall: urllib3\n",
+      "    Found existing installation: urllib3 2.3.0\n",
+      "    Uninstalling urllib3-2.3.0:\n",
+      "      Successfully uninstalled urllib3-2.3.0\n",
+      "  Attempting uninstall: tqdm\n",
+      "    Found existing installation: tqdm 4.67.1\n",
+      "    Uninstalling tqdm-4.67.1:\n",
+      "      Successfully uninstalled tqdm-4.67.1\n",
+      "  Attempting uninstall: python-dateutil\n",
+      "    Found existing installation: python-dateutil 2.9.0.post0\n",
+      "    Uninstalling python-dateutil-2.9.0.post0:\n",
+      "      Successfully uninstalled python-dateutil-2.9.0.post0\n",
+      "  Attempting uninstall: pycparser\n",
+      "    Found existing installation: pycparser 2.22\n",
+      "    Uninstalling pycparser-2.22:\n",
+      "      Successfully uninstalled pycparser-2.22\n",
+      "  Attempting uninstall: numpy\n",
+      "    Found existing installation: numpy 2.2.2\n",
+      "    Uninstalling numpy-2.2.2:\n",
+      "      Successfully uninstalled numpy-2.2.2\n",
+      "  Attempting uninstall: cffi\n",
+      "    Found existing installation: cffi 1.17.1\n",
+      "    Uninstalling cffi-1.17.1:\n",
+      "      Successfully uninstalled cffi-1.17.1\n",
+      "  Attempting uninstall: fastparquet\n",
+      "    Found existing installation: fastparquet 2024.11.0\n",
+      "    Uninstalling fastparquet-2024.11.0:\n",
+      "      Successfully uninstalled fastparquet-2024.11.0\n",
+      "Successfully installed Unidecode-1.3.8 aioftp-0.21.4 bigtree-0.12.5 cffi-1.15.1 dateparser-1.2.1 dbfread-2.0.7 elasticsearch-7.16.2 fastparquet-0.8.3 humanize-4.11.0 loguru-0.6.0 numpy-1.26.2 pycparser-2.21 pyreaddbc-1.2.0 pysus-0.11.0 python-dateutil-2.8.2 regex-2024.11.6 tqdm-4.64.0 typing-extensions-4.12.2 tzlocal-5.3 urllib3-1.26.20 urwid-2.6.16 wget-3.2\n",
+      "Requirement already satisfied: gdown in /usr/local/python/3.13.1/lib/python3.13/site-packages (5.2.0)\n",
+      "Requirement already satisfied: beautifulsoup4 in /home/codespace/.local/lib/python3.13/site-packages (from gdown) (4.12.3)\n",
+      "Requirement already satisfied: filelock in /usr/local/python/3.13.1/lib/python3.13/site-packages (from gdown) (3.16.1)\n",
+      "Requirement already satisfied: requests[socks] in /home/codespace/.local/lib/python3.13/site-packages (from gdown) (2.32.3)\n",
+      "Requirement already satisfied: tqdm in /usr/local/python/3.13.1/lib/python3.13/site-packages (from gdown) (4.64.0)\n",
+      "Requirement already satisfied: soupsieve>1.2 in /home/codespace/.local/lib/python3.13/site-packages (from beautifulsoup4->gdown) (2.6)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /home/codespace/.local/lib/python3.13/site-packages (from requests[socks]->gdown) (3.4.1)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /home/codespace/.local/lib/python3.13/site-packages (from requests[socks]->gdown) (3.10)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/python/3.13.1/lib/python3.13/site-packages (from requests[socks]->gdown) (1.26.20)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /home/codespace/.local/lib/python3.13/site-packages (from requests[socks]->gdown) (2024.12.14)\n",
+      "Requirement already satisfied: PySocks!=1.5.7,>=1.5.6 in /usr/local/python/3.13.1/lib/python3.13/site-packages (from requests[socks]->gdown) (1.7.1)\n",
+      "Collecting pylance\n",
+      "  Downloading pylance-0.23.0-cp39-abi3-manylinux_2_28_x86_64.whl.metadata (7.2 kB)\n",
+      "Requirement already satisfied: pyarrow>=14 in /usr/local/python/3.13.1/lib/python3.13/site-packages (from pylance) (19.0.0)\n",
+      "Requirement already satisfied: numpy>=1.22 in /usr/local/python/3.13.1/lib/python3.13/site-packages (from pylance) (1.26.2)\n",
+      "Downloading pylance-0.23.0-cp39-abi3-manylinux_2_28_x86_64.whl (38.4 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m38.4/38.4 MB\u001b[0m \u001b[31m49.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: pylance\n",
+      "Successfully installed pylance-0.23.0\n",
+      "Requirement already satisfied: tabulate in /usr/local/python/3.13.1/lib/python3.13/site-packages (0.9.0)\n"
+     ]
+    }
+   ],
    "source": [
     "# Costuma ser exigida a instalação destas bibliotecas no primeiro acesso ao Pysus\n",
     "!apt-get update  \n",
